# readme-first

./: README.md
readme-first/: pyproject.toml
readme-first/readme_first/: checks.py  generator.py
readme-first/readme_first.egg-info/: SOURCES.txt
readme_first/: analyzer.py  cli.py  scorer.py
readme_first.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
